Adjusted date on front page; Small edits to italicized words in Intro, Ch1, & Ch3

--- a/chapter3.qmd
+++ b/chapter3.qmd
@@ -101,7 +101,7 @@ The close reading presented here, limited to these two portraits alone, has alre
 [^143]: [](#ftnt_ref143) A medieval reader would not necessarily read the narratives within a manuscript from start to finish and from cover to cover. They might instead skim the pages, skipping around the manuscript until something catches their eye. Decorative initials are decorative, but they serve the important function of indicating the start of something new or the presence of something particularly interesting or meaningful. All of the decorative initials present in the T manuscripts are represented to scale in the edited transcriptions offered in Appendix 2.
 [^144]: [](#ftnt_ref144) T-B has no decorative initial anywhere near this portion of the narrative.
 [^145]: [](#ftnt_ref145) Throughout T, Dembowski matches his paragraph indents with the T-A decorative initials eight times, but he also adds thirty-six paragraph breaks, shifts the location of narrative breaks twice, and removes narrative breaks observable in the manuscript twice.
-[^146]: [](#ftnt_ref146) For example — stepping briefly into literary criticism of the Spanish tradition of the Mary the Egyptian legend — Emily Francomano writes that the Castilian *Vida *’s most direct source is the Old French verse redaction of the* Vie *(Version T) but that the* Vida *departs from the* Vie *“to heighten the already intense focus on issues of monetary exchange, markets, and currency in the* Vida *and to underline María’s economic consciousness” (416-417). Andrew Beresford, who is also focused on the* Vida*, agrees that it is critical for scholars “to distinguish carefully between versions and to modify or reject critical interpretations that do not sit comfortably with the specifically moralizing tone and emphasis of the Spanish poem” (65). He also notes that although discussions of sexualization have enriched to our understanding of Mary’s legend overall, he cautions against reading the legend through an “unconscious heteronormative bias, with the union between male saints regarded as a form of sublimated spiritual friendship, and its reworking, in the form of a male/female encounter, appraised in reductively sexualized terms” (67).
+[^146]: [](#ftnt_ref146) For example — stepping briefly into literary criticism of the Spanish tradition of the Mary the Egyptian legend — Emily Francomano writes that the Castilian *Vida*’s most direct source is the Old French verse redaction of the *Vie* (Version T) but that the *Vida* departs from the *Vie* “to heighten the already intense focus on issues of monetary exchange, markets, and currency in the *Vida* and to underline María’s economic consciousness” (416-417). Andrew Beresford, who is also focused on the *Vida*, agrees that it is critical for scholars “to distinguish carefully between versions and to modify or reject critical interpretations that do not sit comfortably with the specifically moralizing tone and emphasis of the Spanish poem” (65). He also notes that although discussions of sexualization have enriched to our understanding of Mary’s legend overall, he cautions against reading the legend through an “unconscious heteronormative bias, with the union between male saints regarded as a form of sublimated spiritual friendship, and its reworking, in the form of a male/female encounter, appraised in reductively sexualized terms” (67).
 [^147]: [](#ftnt_ref147) For example across all of the T copies, Portrait 1 specifies that Mary the Egyptian possess the gift of courteous speech (v.189). Colby identifies this gift as a quality so popular as to be considered banal: “Some character traits and talents are emphasized more than others. Both men and women are often praised for their courtliness, generosity, and wisdom. The valiance and prowess of young knights and the goodness of noble maidens are also given a fair degree of importance. As for talents, the ability to be a good conversationalist is the only one to which very much attention is paid ; but neither this talent nor the good qualities listed above are presented to the reader in a special way fixed by the literary tradition of the time, and it is only because they are mentioned so frequently throughout the twelfth-century literature that the references to them in the portraits seem quite banal.” (24)
 [^148]: [](#ftnt_ref148) “... It is because of its strong influence upon the attitude of the listener that a portrait cannot fail to be functional at least to some degree.” (100)
 [^149]: [](#ftnt_ref149) Indescribability, according to Colby, is consistent enough of a feature in twelfth-century portraits to be called a *topos* : “The descriptions of physical appearance are fairly often introduced or concluded not only by a reference to Nature’s work, as in the men’s portraits, but also by some mention of the indescribability of the woman’s beauty. … It is particularly important to note that the poet’s admission of his own inability to describe a subject adequately is common enough as a classical and medieval literary theme to have been called a *topos*” (20).
@@ -160,25 +160,25 @@ The close reading presented here, limited to these two portraits alone, has alre
 [^202]: [](#ftnt_ref202) “Tout li noircirent li costé” (v.628)
 [^203]: [](#ftnt_ref203) Copy T-A places greater emphasis on this point of Mary’s flesh changing color, repeating this idea three times “Li chars de li mua coulor” (v.625), “Le blanche char toute muee” (v.640), and “Noire & muee ert le poitrine” (v.641). In every other copy — apart from T-D which omits this couplet — this last verse about Mary’s black and changed chest (v.641) instead places emphasis on the hairiness of her chest: “Noire & polhue ert la poitrine” (v.591 in T-B); “Noire e mossue ert la peitrine” (v.653 in T-C); “Noire & molsue ert sa poitrine” (v.643 in T-E).
 [^204]: [](#ftnt_ref204) “Coulor mua se bloie crine / Blanche devint com une hermine” (vv.629-630). Whereas every other copy mentions Mary’s white hair a second time later in Portrait 2 to describe the hair around Mary’s ears, T-A is the only copy to replace that repetition with another reference to the changed nature of Mary’s flesh on her ears, “Le blanche char toute muee” (v.640) (“Her white flesh changed entirely”). As Colby points out, “excessive hirsuteness of some sort is a common characteristic of ugly persons,” (78), but also, long hair is an important quality in beautiful women: “The poets may neglect the head, but they rarely miss an opportunity to call attention to hair. … despite the fixed ideal of blondness and a fairly limited vocabulary, no two writers describe the hair in exactly the same way” (30). Though the ascetic Mary the Egyptian is portrayed as rather hirsute in most copies, T-D nudges the reader toward a less animalistic depiction. T-D uniquely implies that she has white hair *around* her ears rather than on them (v.644), and T-D omits the couplet — found in copies T-B, T-C, and T-E — that suggests she has white hair on her chest: “Noire & polhue ert la poitrine / sembloit scorce de noire spine” (vv.591-592 in T-B); “Noire e mossue ert la peitrine / L’escorce semblout d’espine” (vv.653-654 in T-C); and “Noire & molsue ert sa poitrine / bien resambloit escorce d’espine” (vv.643-645 in T-E). Mary’s formerly white skin may blacken, but in every copy, her entire body is veiled in the soft whiteness of her long hair.
-[^205]: [](#ftnt_ref205) In every copy except T-A, which omits this couplet, Mary’s face is described as *brulee *(burned) by the sun and frost — “desoz la face eret brulee / del soloilh & de la jalee” (v.579-580 in T-B) — providing a parallel to the description of Mary’s complexion as *coloree* (colored; rosy, blushing) like a rose in Portrait 1 (v.171). T-A is also the only copy not to offer the end rhyme of *tison* in the couplet “& tant avoit noir le menton / com se fuist li chies d’un tison” (vv.583-584 in T-B) (“and her chin was so black / as if it were the head of a firebrand”) using *carbon* instead “& avoit tant noir le menton / Conme s’il fust taint de carbon” (vv.633-634) (“and her chin was as black / as if it were tainted with charcoal”). Either end rhyme maintains the sense of blackness resulting from the burning of organic material, and like charcoal or ashes, Mary is both black* and* white as a result of her prolonged burning.
+[^205]: [](#ftnt_ref205) In every copy except T-A, which omits this couplet, Mary’s face is described as *brulee *(burned) by the sun and frost — “desoz la face eret brulee / del soloilh & de la jalee” (v.579-580 in T-B) — providing a parallel to the description of Mary’s complexion as *coloree* (colored; rosy, blushing) like a rose in Portrait 1 (v.171). T-A is also the only copy not to offer the end rhyme of *tison* in the couplet “& tant avoit noir le menton / com se fuist li chies d’un tison” (vv.583-584 in T-B) (“and her chin was so black / as if it were the head of a firebrand”) using *carbon* instead “& avoit tant noir le menton / Conme s’il fust taint de carbon” (vv.633-634) (“and her chin was as black / as if it were tainted with charcoal”). Either end rhyme maintains the sense of blackness resulting from the burning of organic material, and like charcoal or ashes, Mary is both black *and* white as a result of her prolonged burning.
 [^206]: [](#ftnt_ref206) “Le bouce li fu tenevie / & environ toute noirchie” (vv.631-632)
 [^207]: [](#ftnt_ref207) “Noire & muee ert le poitrine” (v.641)
 [^208]: [](#ftnt_ref208) “N’est merveille se iert noirchie” (v.661). T-B is the only copy lacking this verse.
 [^209]: [](#ftnt_ref209) “Car che saichent tout pecheor / Ki forfait sont au Creator / Que nus pekiés n’est si pesant / Ne si horrible ne si grant / Dont Dex ne fache vrai pardon / Par foi & par confession / A ciax qui prendent penitance / Mais gardent soi de mescreance / Se hom guerpist le merchi Dé / Cil peciés n’iert ja pardoné” (vv.13-22)
 [^210]: [](#ftnt_ref210) Colby addresses the stereotypical usage of whiteness and blackness by twelfth-century romance poets in her second chapter, and many of these stereotypes are recognizeable in the T portraits. She observes the prevalence of whiteness as an important distinguishing feature of any part of the body for either handsome men or beautiful women described in such portraits: “Whiteness is the most important characteristic of a beautiful forehead. The adjective *blanc* is used alone for the most part, but comparisons with ermine or with a lily may bring out the actual degree of whiteness the writer has in mind. … The whiteness of a person’s skin, no matter what part of the body it covers, is frequently likened to that of a lily; but this likeness is expressed in a variety of ways, none of which can be shown with absolute certainty to have been clichés in this period” (37). But in contrast with a white forehead and as we observe in Mary the Egyptian, “Two finely drawn dark eyebrows stand out against the white foreheads of our handsome heroes and fair heroines … As far as color is concerned, they may be brown, brownish (*brunet*), or black” (38). When translating from Old French, though, it is important not to overly narrow the connotations of words like *blanc*, *neir*, or *vair*, which may indicate color as well as qualities of light or opacity. Colby notes the use of the word *blanc* to describe “... both objects that are white in color and those that gleam in the light” (53). Twelth-century writers, according to Colby, seemed to use blackness as a way to demonstrate their poetic inventiveness, comparing black skin to objects like pepper sauce, burned coal, devils, or mulberries, but also Colby briefly suggests that blackness would have been a recognizable indicator of ethnic otherness to any medieval audience: “It is interesting to see how traditional it was for Saracens to have black skin. Chrétien’s indirect reference to the color of the Herdsman’s skin would without a doubt have been understood immediately by any twelfth-century reader” (86). While other versions of the *Vie* may limit the reader to visions of a blackened Mary the Egyptian in the desert, Version T — with its unique inclusion of the portraits — offers a more balanced Mary who is white and black in equal measure, troubling any easy conclusions concerning her beauty and her character.
-[^211]: [](#ftnt_ref211) T-E inverts this couplet giving instead “N’iert mie graindres d’une pome / L’un des traians de cele domme” (vv.177-178). In this couplet (vv.177-178) and in the later couplet (vv.187-188) mentioned above in which *dame * and*home * form the end rhyme, we may find some slight linguistic clues about the scribes of the T corpus and their source material. As Dembowski highlights concerning T-A, “Notre scribe ignorait apparemment la forme*dome *, car* dame *rime avec* pome *177-178 et avec* home *187-188” (32). The T-E scribe strangely uses both spellings to rhyme* pome *with* domme *and* dame *with* homme *. These imperfect rhymes may at least be partially explained by the octosyllabic meter of Version T, which sometimes necessitates words like* dame *and* pome *to be pronounced with two syllables (as is the case in vv.177-178 of T-A but not in vv.187-188 of T-A). The T-C scribe also rhymes* dame *with* pome *(vv.179-180 in T-C) but uniquely changes the* dame */* home *rhyme to* dame */* aume *(vv.189-190). T-B does not offer these rhymes, and the T-D scribe seems to have misspelled the variant* dume *twice writing an “n” instead of an “m” each time to provide* dune */* pume *and* dune */* home*. Although we see variations on the exact quality of the end rhyme in these couplets, the consistency of pairing “lady” with “apple” and “man” suggests an agreement on the importance of putting these nouns in alignment with one another — specifically, I argue, for the purpose of alluding to the Biblical story of Adam and Eve.
+[^211]: [](#ftnt_ref211) T-E inverts this couplet giving instead “N’iert mie graindres d’une pome / L’un des traians de cele domme” (vv.177-178). In this couplet (vv.177-178) and in the later couplet (vv.187-188) mentioned above in which *dame* and *home* form the end rhyme, we may find some slight linguistic clues about the scribes of the T corpus and their source material. As Dembowski highlights concerning T-A, “Notre scribe ignorait apparemment la forme *dome*, car *dame* rime avec *pome* 177-178 et avec *home* 187-188” (32). The T-E scribe strangely uses both spellings to rhyme *pome* with *domme* and *dame* with *homme*. These imperfect rhymes may at least be partially explained by the octosyllabic meter of Version T, which sometimes necessitates words like *dame* and *pome* to be pronounced with two syllables (as is the case in vv.177-178 of T-A but not in vv.187-188 of T-A). The T-C scribe also rhymes *dame* with *pome* (vv.179-180 in T-C) but uniquely changes the *dame* / *home* rhyme to *dame* / *aume* (vv.189-190). T-B does not offer these rhymes, and the T-D scribe seems to have misspelled the variant *dume* twice writing an 'n' instead of an 'm' each time to provide *dune* / *pume* and *dune* / *home*. Although we see variations on the exact quality of the end rhyme in these couplets, the consistency of pairing “lady” with “apple” and “man” suggests an agreement on the importance of putting these nouns in alignment with one another — specifically, I argue, for the purpose of alluding to the Biblical story of Adam and Eve.
 [^212]: [](#ftnt_ref212) “& si avoit beles mameles / mut bien seans petiz & beles” (vv.171-172 in T-B) (“and of course she had beautiful breasts, / very well set, small, and beautiful”)
 [^213]: [](#ftnt_ref213) Remember Gaunt — who bases his reading of Version T on copy A alone — finds that the attention paid to Mary’s breasts in Portrait 1 is excessive and that the description of Mary in general is marked by “lasciviousness” (219). Gaunt does not engage with the comparison of Mary’s breasts to apples, and he does not note the T-poet’s specification that Mary is wearing a bliaut in Portrait 1, which I believe justifies the portrait's focus on her upper body.
 [^214]: [](#ftnt_ref214) “A escorce samblant d’espine” (v.642). T-D is the only copy to omit the detail that Mary’s chest is like bark.
 [^215]: [](#ftnt_ref215) “Le face tenrre & coloree / Com le rose qui sempre est nee” (vv.171-172)
-[^216]: [](#ftnt_ref216) “La face tenre en celee.ee / Com la rose ki or est nee” (vv.161-162 in T-B). Cruz-Sáenz silently corrects this verse to *coloree *(119), but Dembowski notes this variant verse with a question mark beside it (75n171). I agree with Dembowski that it is unclear why the T-B scribe has added extra e’s at the end of this word, but the scribe has unquestionably written* celee*. The extra e’s cannot be explained away by the final letter separation formatting that the scribe uses throughout copy T-B as this verse ends in the center of the line, not at the end of the line (line 23 of 29 on f.110r). This scribal oddity may be observed in the ‘Nearly Diplomatic’ column of T-B featured in Appendix 2.
+[^216]: [](#ftnt_ref216) “La face tenre en celee.ee / Com la rose ki or est nee” (vv.161-162 in T-B). Cruz-Sáenz silently corrects this verse to *coloree *(119), but Dembowski notes this variant verse with a question mark beside it (75n171). I agree with Dembowski that it is unclear why the T-B scribe has added extra e’s at the end of this word, but the scribe has unquestionably written *celee*. The extra e’s cannot be explained away by the final letter separation formatting that the scribe uses throughout copy T-B as this verse ends in the center of the line, not at the end of the line (line 23 of 29 on f.110r). This scribal oddity may be observed in the ‘Nearly Diplomatic’ column of T-B featured in Appendix 2.
 [^217]: [](#ftnt_ref217) According to the T-poet, Mary the Egyptian leaves home when she is only twelve years old. This detail is mentioned in every copy except for T-C: “Des qu’ele ot passé -xii- ans” (v.99).
 [^218]: [](#ftnt_ref218) While every other copy draws a clear one-to-one correspondence between each thorn that pricks Mary and a sin that falls away (“C’uns de ses pekiés li caoit / Quant une espine le pongnoit” [vv.657-658]), T-E renders this connection less explicit. In this copy, Mary is pleased not because each thorn expiates a sin but because the thorns themselves fall away — shifting emphasis from the logic of penance (in which pain leads to absolution) to the transience of all earthly suffering: “Quant une espine le poignoit / En un de ses piés li chaoit” (vv.659-660 in T-E) (“for as a thorn pricked her / in one of her feet, it would fall away”).
 [^219]: [](#ftnt_ref219) Robertson characterizes the eroticism of Version T as perfectly consistent with the sacred culture of the twelfth-century context from which this text arose, “God is in love with us and does not disdain to speak to us in our own love-language. Erotic love is a metaphor for the sacred passion. In erotic experience we learn, little by little, to feel what we should feel for God, who loved us *first*” (“Twelfth-Century Literary Experience” 76).
 [^220]: [](#ftnt_ref220) Zozimas initially sees Mary as a shadow who was either man or woman (vv.823-824) but is in fact “l’Egyptiene” (v.825). When the “ombre” turns her face toward him (v.831), Zozimas calls upon God to defend him from the Devil and from “male temptation” (v.835), which may be translated equally as ‘evil’ or even ‘male’ temptation. (The word choice is the same in every T copy: “male temptation” [v.768 in T-B], “male temptaciun” [v.846 in T-C], “male temptaciun” [v.836 in T-D], and “male tenptacion” [v.838 in T-E].) Zozimas’s prayer suggests Mary’s appearance still holds the power to tempt a man but now her desirability serves the constructive goal of Christian salvation.
 [^221]: [](#ftnt_ref221) Following these verses, the reader is again given a mini-portrait (vv.840-853) of Mary that succinctly emphasizes her contradictory nature. From head to toe, she is white *and* black, concealed *and* revealed, accessible yet elusive, desirable and pure. With this brief description, Zozimas is only seeing Mary for the first time. He does not know her name or her story, but the reader of Version T has been with Mary since the beginning.
 [^222]: [](#ftnt_ref222) Campbell’s reading of Mary’s body is concerned with its conversion from the sexual to the textual via the miraculous note found beside her corpse, Zozimas’s retelling of her story to his brotherly order, the T-poet’s translation of the saint’s Life, and Rutebeuf’s rewriting of her life. I discuss Campbell’s reading in more detail in the Introduction to this dissertation (section ‘Why Version T?’)
-[^223]: [](#ftnt_ref223) Every other copy except for T-E, which evokes *Damedex * in this verse, calls upon*Jhesu*.
+[^223]: [](#ftnt_ref223) Every other copy except for T-E, which evokes *Damedex* in this verse, calls upon *Jhesu*.
 [^224]: [](#ftnt_ref224) “kar ele estoit sur tutes gemme” (v.164 in T-C)
 [^225]: [](#ftnt_ref225) “ele recevoit or & argent” (v.189 in T-D)
 [^226]: [](#ftnt_ref226) “A faim & a soif & a dur lit” (v.614)
