--- a/intro.qmd
+++ b/intro.qmd
@@ -46,13 +46,13 @@ In structuring this dissertation, I offer an edition of a text with a robust jus
 
 The twelfth-century Anglo-Norman verse redaction of the Life of Mary the Egyptian known as Version T was written by an anonymous poet in the vernacular and appears to have had a considerable influence on the saint’s cult more broadly in the West. Version T tells the story of Mary, a penitent saint who began her life as a Christian girl from a high-class home. Despite this privileged upbringing, the T-poet notes that she was “badly taught,”[^4] and at the age of twelve, she decides to leave her home and potential marriage prospects in favor of a life alone in Alexandria where she takes up sex work. For years, her many lovers lavish her with fine gifts and shed one another’s blood at her doorstep. Eventually, Mary travels by boat to Jerusalem with a group of pilgrims, paying for her passage with the gift of her body. While in the holy land, Mary experiences a great epiphany. She renounces her former way of life, adopts the Virgin as her guarantor, and flees to the desert beyond the river Jordan with only three loaves of bread and the clothes on her back. Living out the rest of her days as an ascetic, she trades soft beds for hard stone, she grazes on grass and drinks directly from streams, her clothes disintegrate and are replaced by her enveloping, white hair, and her skin blackens. Yet in spite of these harsh conditions, the T-poet portrays her as being perfectly content in her asceticism; in the wilderness, she is provided for[^5] and lives undisturbed by any beast.[^6] Ultimately, she is met by Zozimas (sometimes Zo*s*imas), a holy man who witnesses her many miracles, learns a profound lesson in humility through the model of this Desert Mother, and shares the story of her life with the brothers of his monastery just as the T-poet transmits this saint’s Life to the reader.
 
-But why does Version T, among all the various French accounts of Mary’s life, merit particular attention at all?[^7] To begin with, it is the most substantial and well-crafted verse redaction of the legend in the French tradition, consisting of about 1,532 octosyllabic verses in rhyming couplets.[^8] Another distinct feature of Version T is the shift in focus from the holy man Zozimas to Mary the Egyptian herself. Other language traditions — such the Old English, which is considered the earliest Western vernacular redaction (Magennis,* Old English Life* 1) — concentrate largely on Zozimas’s humble ventures. In the introduction to his edition, Hugh Magennis writes:
+But why does Version T, among all the various French accounts of Mary’s life, merit particular attention at all?[^7] To begin with, it is the most substantial and well-crafted verse redaction of the legend in the French tradition, consisting of about 1,532 octosyllabic verses in rhyming couplets.[^8] Another distinct feature of Version T is the shift in focus from the holy man Zozimas to Mary the Egyptian herself. Other language traditions — such the Old English, which is considered the earliest Western vernacular redaction (Magennis, *Old English Life* 1) — concentrate largely on Zozimas’s humble ventures. In the introduction to his edition, Hugh Magennis writes:
 
 > ...the Old English *Life of St. Mary of Egypt* betrays no indications of anxiety or reticence in transmitting the saint’s sense of her own sinfulness or in detailing the extent of that sinfulness, nor does it seek to downplay the gender issues that are inherent in the received legend, in which Mary, a woman, is presented as a figure of authority and a teacher to Zosimas, while he, though a priest, defers to her spiritual superiority. The *Life of St Mary of Egypt* portrays a spiritually-empowered female, who has lived independent of the guidance of men to an extent unparalleled elsewhere in Old English writings about saints. (2-3)
 
 Though I am not at all opposed to viewing Mary the Egyptian as a ‘spiritually-empowered female,’ I am somewhat skeptical of this characterization being equally applied to versions in which she is not even the central character of the narrative.[^9] Version T pulls Mary the Egyptian from the margins of her own legend and makes her the central protagonist. This major narrative shift was clearly an intentional, meaningful choice on the part of the T-poet, and it warrants more analysis than it has received.
 
-Although Version T has been described as the “apex of the legend’s development” by Duncan Robertson (*Medieval Saints’ Lives *119), it has received relatively little scholarly attention in comparison to contemporary texts of other genres.[^10] A good number of pieces have been written addressing Rutebeuf’s later French version (Version R) of the saint’s legend,[^11] but Peter Dembowski, who does not include R in his edition*,* portrays R as merely a reshuffling of T with some two hundred verses inserted from Version O (*Marie L’Égyptienne *22-23).[^12] We might suspect that Version R’s relative popularity among modern scholars stems in part from the fact that we can attach the name of Rutebeuf to the text, reading the narrative through the self-acknowledged intentions of that known author who embeds himself within it,[^13] but also, thanks to the work of Michel Zink, Version R is the only French version of the Life of Mary the Egyptian that has been published in translation, making it far more accessible to modern readers. Similarly, ample scholarship has been produced focusing on the Old English verse redaction, and we might draw some connection between this scholarly interest and the availability of the Old English poem thanks to the Magennis edition, which includes a modern English parallel-text translation.[^14] A great deal of scholarship has been published addressing the legend in the many other vernacular languages as well,[^15] especially the Spanish tradition, which is itself believed to make use of Version T as its source.[^16] There are only a handful, though, of articles and chapters that focus wholly and directly on T.[^17] These include editor of Version T Peter Dembowski’s discussion of the poem’s use of Anglo-Norman language;[^18] five pieces written by Duncan Robertson over several decades primarily concerned with the way the T-poet is able to render the Life into vernacular verse without sacrificing its spiritual core;[^19] a section of a chapter on gender in hagiography by Simon Gaunt in his monograph *Gender and Genre in Medieval French Literature* (1995);[^20] Cary Howie’s article addressing the relationship between the visibility of saintly bodies and notions of conversion;[^21] and portions of Emma Campbell’s *Medieval Saints’ Lives: The Gift, Kinship and Community in Old French Hagiography* (2008).[^22] These scholars of Version T have come to somewhat differing conclusions about the text, but overall, there has been a unified fixation on Mary the Egyptian’s sexuality as the key to understanding her legend.
+Although Version T has been described as the “apex of the legend’s development” by Duncan Robertson (*Medieval Saints’ Lives *119), it has received relatively little scholarly attention in comparison to contemporary texts of other genres.[^10] A good number of pieces have been written addressing Rutebeuf’s later French version (Version R) of the saint’s legend,[^11] but Peter Dembowski, who does not include R in his edition, portrays R as merely a reshuffling of T with some two hundred verses inserted from Version O (*Marie L’Égyptienne* 22-23).[^12] We might suspect that Version R’s relative popularity among modern scholars stems in part from the fact that we can attach the name of Rutebeuf to the text, reading the narrative through the self-acknowledged intentions of that known author who embeds himself within it,[^13] but also, thanks to the work of Michel Zink, Version R is the only French version of the Life of Mary the Egyptian that has been published in translation, making it far more accessible to modern readers. Similarly, ample scholarship has been produced focusing on the Old English verse redaction, and we might draw some connection between this scholarly interest and the availability of the Old English poem thanks to the Magennis edition, which includes a modern English parallel-text translation.[^14] A great deal of scholarship has been published addressing the legend in the many other vernacular languages as well,[^15] especially the Spanish tradition, which is itself believed to make use of Version T as its source.[^16] There are only a handful, though, of articles and chapters that focus wholly and directly on T.[^17] These include editor of Version T Peter Dembowski’s discussion of the poem’s use of Anglo-Norman language;[^18] five pieces written by Duncan Robertson over several decades primarily concerned with the way the T-poet is able to render the Life into vernacular verse without sacrificing its spiritual core;[^19] a section of a chapter on gender in hagiography by Simon Gaunt in his monograph *Gender and Genre in Medieval French Literature* (1995);[^20] Cary Howie’s article addressing the relationship between the visibility of saintly bodies and notions of conversion;[^21] and portions of Emma Campbell’s *Medieval Saints’ Lives: The Gift, Kinship and Community in Old French Hagiography* (2008).[^22] These scholars of Version T have come to somewhat differing conclusions about the text, but overall, there has been a unified fixation on Mary the Egyptian’s sexuality as the key to understanding her legend.
 
 Robertson considers the translation of the saint’s Life into the French vernacular a signal of a renewal of interest in her Life. He points to the period as one in which the act of reading became particularly pertinent to spirituality, in which there was an upsurge in Marian devotion, and in which hagiography was influenced by “poets and romancers” (“Poem and Spirit” 306) to suit the tastes of a lay audience. He insists that the text is not a vulgarization of the saint’s Life; rather the poet demonstrates a clear sense of orthodoxy (“Poem and Spirit” 316). For Robertson, the content and rhetoric of the text when combined become a “manifestation of Grace” (“Poem and Spirit” 319), exemplifying the paradoxical nature of Mary the Egyptian as a holy sinner. She invokes the Virgin, who “is not merely a person but an incarnate formal principle, the universal reconciliation of contraries — nothing more and nothing less than poetry itself” (“Poem and Spirit” 318). His assessment, however, is not shared by Simon Gaunt who emphasizes the sexual pleasure the text may have been intended to arouse in a male audience at the expense of women:
 
@@ -68,7 +68,7 @@ Gaunt’s reading has also been addressed directly by both Howie and Campbell wh
 
 Building on Gaunt and Howie, Campbell leverages the wider corpus of the French tradition of Mary the Egyptian to queer our reading of Mary’s body and the discourse surrounding her body, demonstrating the indeterminacy of both the messages of this text and the audiences of this text — audiences who, according to Campbell, formed a larger, complex community.[^25] Campbell sees Mary’s nakedness before Zosimas’s gaze as mirroring the “verbal striptease” (162) of her confessions,[^26] and she considers this scene of their initial meeting to remain “residually attached to the titillation that this relationship was originally designed to produce” (162) — meaning a desire for salvation above all else through humility. But much like Robertson, Campbell also reframes Mary the Egyptian’s relationship with her audience in a compelling way:
 
-> Mary’s redefined relationship to the social world is one that involves the confirmation of male community rather than its dissolution, the setting of Christian example rather than its corruption. It is a relationship that once again exposes Mary to a male public, *yet in a transformed, strictly disembodied form: the final contact between Mary and her male admirers is ultimately maintained not through her body but through the text of her life. *(164; my emphasis)
+> Mary’s redefined relationship to the social world is one that involves the confirmation of male community rather than its dissolution, the setting of Christian example rather than its corruption. It is a relationship that once again exposes Mary to a male public, *yet in a transformed, strictly disembodied form: the final contact between Mary and her male admirers is ultimately maintained not through her body but through the text of her life.* (164; my emphasis)
 
 When Zozimas discovers the deceased body of Mary the Egyptian — identified for him clearly for the first time thanks to the miraculous note left beside her corpse that reads, “Zozimas, take the body of Mary, / and bury it with God’s help. / When you have buried it, / pray for her by your mercy” (vv.1387-1390)[^27] — the reader is simultaneously struck in parallel by this experience of revelation, reading the miraculous note through Zozimas’s eyes.[^28] Exposed to the reader thanks to the language of the T-poet, Mary the Egyptian is transmuted; her being has been made interpretable in textual form as a readable corpus in contrast with her former body, which at one time was ‘knowable’ only sexually. Following her burial, Zozimas is ready to unveil her story to others:
 
@@ -80,7 +80,7 @@ When Zozimas discovers the deceased body of Mary the Egyptian — identified for
 | Lor raconte toute le vie, | He tells them her whole life (vv.1501-1504) |
 :::
 
-This conclusion sets off a *mise en abyme* of storytelling: Zozimas is finally free to tell Mary the Egyptian’s story to his brotherhood who will, in turn, improve the lives of others in the retelling of it; the anonymous T-poet has recounted the narrative to the reader who will likewise feel compelled to share the narrative of Zozimas telling the story of Mary the Egyptian who — prior to all of this — has told* her story* to Zozimas. As the reader recognizes him or herself as a member of this knowledge loop, they encounter the complicated layers embedded within Version T. That layering not only invites repeated telling and retelling but also exemplifies the dynamic interaction between text, interpretation, and transmission.
+This conclusion sets off a *mise en abyme* of storytelling: Zozimas is finally free to tell Mary the Egyptian’s story to his brotherhood who will, in turn, improve the lives of others in the retelling of it; the anonymous T-poet has recounted the narrative to the reader who will likewise feel compelled to share the narrative of Zozimas telling the story of Mary the Egyptian who — prior to all of this — has told *her story* to Zozimas. As the reader recognizes him or herself as a member of this knowledge loop, they encounter the complicated layers embedded within Version T. That layering not only invites repeated telling and retelling but also exemplifies the dynamic interaction between text, interpretation, and transmission.
 
 Such a structure makes Version T an all the more ideal candidate for an experimental edition that leverages the nuances of its textual variations across its manuscript witnesses. The close consideration of individual manuscript copies further complicates our understanding of Version T and may even help to explain how this narrative has been received so contrastingly by previous scholars. Over the course of the scholarly conversation outlined above, we can see a shared fascination with the eroticism of T, but something somewhat lacking from this decades-long dialogue is a more explicit regard for the individual source manuscripts and their influence.
 
@@ -156,12 +156,12 @@ Finally, as the entirety of this dissertation is presented as a digital document
 [^9]: [](#ftnt_ref9) The French versions that are narratively centered on Mary are T, X, V, W, N, and R — all of these apparently deriving structurally from T — and the versions that are narratively centered on her counterpart Zosimas are O, Z, U, Y, and L.
 [^10]: [](#ftnt_ref10) Simon Gaunt makes it clear that the discrepancy between texts that were most popular among medieval readers and those that are most popular among modern readers is in large part caused by the skewed production of modern editions: “Hagiography is good for medievalists. I do not thereby mean that the texts are necessarily good for their souls (though they may be), but rather that saints’ lives offer a useful corrective to the reading experience of most modern readers of vernacular medieval literature, which is often grounded almost entirely in profane texts. … The profane texts students of Old French and Occitan mostly read represent a tiny proportion of the texts produced in medieval France and Occitania. Even in the vernacular the quantity of religious texts which has survived is far greater than their availability in modern editions suggests and vernacular hagiography was at least as popular as other literary genres, if not more so. Modern views of medieval vernacular writing are skewed by the marginalization of hagiography” (180).
 [^11]: [](#ftnt_ref11) These include Dawson (2003) & (2005), Delfin (1989), Foehr-Janssens (2000), Karras (1990), Mariani (2017), Nash (1971), and Uhlig (2010).
-[^12]: [](#ftnt_ref12) In her article “Rutebeuf’s Contribution to the Saint Mary the Egyptian Legend” (1971), Suzanne Nash likewise describes R as a simplification of T, “The prayer in *T * is far more complicated. Not only does it reveal a feminine mind analysing her own sinfulness, but it is a*tour de force * of persuasive rhetoric” (699n12; Nash’s emphasis). According to Nash’s assessment, the verse of R relies more heavily on poetic devices of repetition to imitate the kinetic experience of Catholic ritual in order to excite a lay audience that “was not especially learned” (697). Thus, Nash supposes that the audience’s experience of R* * becomes more ritualistic than didactic (697). If we follow Nash’s assessment that T is far more literarily complex and didactic than R, then who exactly was the intended readership of T? And what exactly were they meant to glean from its highbrow style and its elevated didacticism? Scholars of Version T have come to somewhat differing conclusions to these questions, which I will discuss further below, but overall, scholarship on T has been predominantly fixated on Mary the Egyptian’s sexuality as the key to approaching the answers.
+[^12]: [](#ftnt_ref12) In her article “Rutebeuf’s Contribution to the Saint Mary the Egyptian Legend” (1971), Suzanne Nash likewise describes R as a simplification of T, “The prayer in *T * is far more complicated. Not only does it reveal a feminine mind analysing her own sinfulness, but it is a *tour de force* of persuasive rhetoric” (699n12; Nash’s emphasis). According to Nash’s assessment, the verse of R relies more heavily on poetic devices of repetition to imitate the kinetic experience of Catholic ritual in order to excite a lay audience that “was not especially learned” (697). Thus, Nash supposes that the audience’s experience of R becomes more ritualistic than didactic (697). If we follow Nash’s assessment that T is far more literarily complex and didactic than R, then who exactly was the intended readership of T? And what exactly were they meant to glean from its highbrow style and its elevated didacticism? Scholars of Version T have come to somewhat differing conclusions to these questions, which I will discuss further below, but overall, scholarship on T has been predominantly fixated on Mary the Egyptian’s sexuality as the key to approaching the answers.
 [^13]: [](#ftnt_ref13) Emma Campbell recounts how Rutebeuf describes the labor of his rewriting of the saint’s *Vie* as an act of penance in imitation of Mary’s own labors (176).
-[^14]: [](#ftnt_ref14) An English translation of Paul the Deacon’s Latin Life of Saint Mary of Egypt was also published by Benedicta Ward in her *Harlots of the Desert: A Study of Repentance in Early Monastic Sources *(1987), which may have also contributed to the quantity of English language scholarship on the legend in general. The essay collection* The Legend of Mary of Egypt in Medieval Insular Hagiography* (1996) and several other pieces (Chase [1986], Heron [2000], Karras [1996], Lees & Overing [2001] Magennis [1985], and Scheil [2000]) on the topic of the insular tradition predate the Magennis edition, but appearing after the Magennis edition, we have seven more articles concerning the Old English verse: Black (2011) & (2017), Blud (2017), Cotter-Lynch (2021), Maslanka (2013), Szarmach (2013), and Watt & Lees (2011).
+[^14]: [](#ftnt_ref14) An English translation of Paul the Deacon’s Latin Life of Saint Mary of Egypt was also published by Benedicta Ward in her *Harlots of the Desert: A Study of Repentance in Early Monastic Sources *(1987), which may have also contributed to the quantity of English language scholarship on the legend in general. The essay collection *The Legend of Mary of Egypt in Medieval Insular Hagiography* (1996) and several other pieces (Chase [1986], Heron [2000], Karras [1996], Lees & Overing [2001] Magennis [1985], and Scheil [2000]) on the topic of the insular tradition predate the Magennis edition, but appearing after the Magennis edition, we have seven more articles concerning the Old English verse: Black (2011) & (2017), Blud (2017), Cotter-Lynch (2021), Maslanka (2013), Szarmach (2013), and Watt & Lees (2011).
 [^15]: [](#ftnt_ref15) By my count, 35 articles have been published concerning the Mary the Egyptian legend in the Bulgarian, Croatian, Dutch, German, Greek, Irish, Italian, Norse, and Spanish traditions. These include Acquafredda (2008), Beresford (2020), Bisanti (2013), Cortina (1980), Delmas (1900) & (1901), De Vleeschauwer (1998), Di Giorgi (2000), Dimitrova (1995), Eidinow (2019), Faccon (1998), Francomano (2014), Grieve (2000), Kaltsogianni (2011), Kersten (1992), Maier (1984), Miller (2003), Mirachvili-Springer (2012), Noret (1987), Ó Laoghaire (1990), Petrova (1999), Petrović (2005), Posa (1999), Scarborough (2013), Seidenspinner-Núñez (1992), Villani (1994), Walsh (1989), and eight more articles by Zubillaga alone.
-[^16]: [](#ftnt_ref16) In the introduction to his edition, Dembowski writes “T a sûrement servi de source directe à d’autres versions vernaculaires (notamment à la prose *X *, au poème* R *, à la paraphrase franco-vénitienne et à la* Vida* espagnole)” (16).
-[^17]: [](#ftnt_ref17) There are other publications that make use of Version T indirectly. As mentioned above, Nash (1971), Uhlig (2010), and Mariani (2017) are primarily fixated on Version R, but each of them do also make use of Version T for the sake of comparison. Uhlig, in particular, is admirably precise in specifying the exact verses from each version she uses to draw her conclusions, though she makes no reference to particular manuscripts, relying entirely on Dembowski’s edition. Cazelles (1979) discusses the French tradition of the legend more generally. She makes use of Versions T, W, N, O, and R to consider how these different versions render Mary the Egyptian a figure one might view as a model (or not) for “perfectionnement” (14). Ultimately, she does not believe the Life allows the reader to identify with Mary, writing, “Proche de Dieu et non du monde, Marie reste un mirage” (22). Karras’s hefty article “Holy Harlots: Prostitute Saints in Medieval Legend” (1990) is similarly a more indirect treatment of Version T. She considers five different saints (Mary the Egyptian, Thaïs, Pelagia, Afra, and Mary Magdalene), and in her analysis of Mary the Egyptian, she makes use of Versions R and T while also making reference to the differences that may be found in other language traditions such as Latin, German, English, and Scottish. McCulloch (1982) makes use of Dembowski’s then recent edition to draw parallels between the T-poet’s portraits of Mary the Egyptian and Villon’s portraits of the Belle Heaulmière, which is her primary focus. Rudder (1982) focusses on Version X, claiming that because X is written in prose it reduces the stylistic elements present in T in favor of a greater emphasis on the deeper, religious teachings of the text — an analysis I do not support as Version T is considered the source of Version X and as T’s stylistic elements are what make its didactic messaging all the more powerful for instructing a lay audience. Pinto-Mathieu (1998) is mainly working from Jacobus de Voragine’s *Golden Legend *, finding a preference for redactions with a structural focus on Zozimas (106-107). Pinto-Mathieu does, however, make use of Dembowski’s edition of T to make certain points, which I will explore further below. Finally, Sargent’s research is fixated entirely on the development and influence of Version T, which she wholeheartedly endorses writing, “No other version of the* Life of St. Mary the Egyptian* advances beyond the development represented by T” (261). Sargent’s work is a dissertation — directed by Duncan Robertson — from the late 1970s, which does not appear to have resulted in any subsequent publications.
+[^16]: [](#ftnt_ref16) In the introduction to his edition, Dembowski writes “T a sûrement servi de source directe à d’autres versions vernaculaires (notamment à la prose *X *, au poème *R*, à la paraphrase franco-vénitienne et à la *Vida* espagnole)” (16).
+[^17]: [](#ftnt_ref17) There are other publications that make use of Version T indirectly. As mentioned above, Nash (1971), Uhlig (2010), and Mariani (2017) are primarily fixated on Version R, but each of them do also make use of Version T for the sake of comparison. Uhlig, in particular, is admirably precise in specifying the exact verses from each version she uses to draw her conclusions, though she makes no reference to particular manuscripts, relying entirely on Dembowski’s edition. Cazelles (1979) discusses the French tradition of the legend more generally. She makes use of Versions T, W, N, O, and R to consider how these different versions render Mary the Egyptian a figure one might view as a model (or not) for “perfectionnement” (14). Ultimately, she does not believe the Life allows the reader to identify with Mary, writing, “Proche de Dieu et non du monde, Marie reste un mirage” (22). Karras’s hefty article “Holy Harlots: Prostitute Saints in Medieval Legend” (1990) is similarly a more indirect treatment of Version T. She considers five different saints (Mary the Egyptian, Thaïs, Pelagia, Afra, and Mary Magdalene), and in her analysis of Mary the Egyptian, she makes use of Versions R and T while also making reference to the differences that may be found in other language traditions such as Latin, German, English, and Scottish. McCulloch (1982) makes use of Dembowski’s then recent edition to draw parallels between the T-poet’s portraits of Mary the Egyptian and Villon’s portraits of the Belle Heaulmière, which is her primary focus. Rudder (1982) focusses on Version X, claiming that because X is written in prose it reduces the stylistic elements present in T in favor of a greater emphasis on the deeper, religious teachings of the text — an analysis I do not support as Version T is considered the source of Version X and as T’s stylistic elements are what make its didactic messaging all the more powerful for instructing a lay audience. Pinto-Mathieu (1998) is mainly working from Jacobus de Voragine’s *Golden Legend *, finding a preference for redactions with a structural focus on Zozimas (106-107). Pinto-Mathieu does, however, make use of Dembowski’s edition of T to make certain points, which I will explore further below. Finally, Sargent’s research is fixated entirely on the development and influence of Version T, which she wholeheartedly endorses writing, “No other version of the *Life of St. Mary the Egyptian* advances beyond the development represented by T” (261). Sargent’s work is a dissertation — directed by Duncan Robertson — from the late 1970s, which does not appear to have resulted in any subsequent publications.
 [^18]: [](#ftnt_ref18) “Le poème anonyme sur sainte Marie l’Égyptienne: Est-il anglo-norman?” (1981)
 [^19]: [](#ftnt_ref19) In “Poem and Spirit” (1980), Robertson argues that the T-poet makes use of the rhetoric of the romance genre without vulgarizing it, taking clear inspiration from Bernard of Clairvaux, “For the French poet also the meaning of words is inseparable from feeling. … he has ‘translated’ the saint’s life into the barbarous language of love” (316). Then, in “Twelfth-Century Literary Experience” (1987), Robertson disagrees with Cazelles’s assessment that the reader cannot identify with Mary the Egyptian, claiming that Cazelles’s interpretation is more appropriate for the thirteenth-century versions, “But our 12th-century poem is another matter. It represents an exceptional moment in literary history, one of fervor and emotional immediacy. 12th-century saints’ lives present themselves insistently as experience, not other or alien, but very much our own” (77). Robertson’s monograph *The Medieval Saints’ Lives*(1995) and article “The Anglo-Norman Verse Life” (1998) are particularly useful in understanding Version T’s place in the larger history of the legend and within the genre of hagiography. Finally, “‘Cume lur cumpaine et lur veisine’” (2001) examines the complex fellowship among women in Anglo-Norman hagiography.
 [^20]: [](#ftnt_ref20) Gaunt pays particular attention to Mary the Egyptian in the section “*Clergie*, Community and Gender” in the chapter “Saints, Sex, and Community: Hagiography” (212-233).
@@ -185,12 +185,12 @@ Finally, as the entirety of this dissertation is presented as a digital document
 [^38]: [](#ftnt_ref38) “A iceu tens n’ert si bele femme / kar ele estoit sur tutes gemme” (vv.163-164 of T-C)
 [^39]: [](#ftnt_ref39) In T-A, she is called *mossue * once: “N’iert merveille se iert moussue” (v. 664). In T-B, she is called *mossue * twice and *polhue * once: “& de blanc poilh tote mossue / Noire & polhue ert la poitrine … N’ert mervelhe s’ele ert mossue” (vv.590-591 & 607 of T-B). In T-C, she is called*mossue * three times: “e de blanc peil tote mossue / Noire e mossue ert la peitrine … Ne fu merveille s’ert mossue” (vv.652-653 & 676 of T-C). She is only called*mossue * once in copies T-D and T-E: “N’ert merveille s’ele ert mossue” (v.666 of T-D); “N’iert par merveille si ert molsue” (v.666 of T-E). And although I cannot personally confirm the full verse as it is written in T-L due to my lack of access to the British Library, Dembowski notes the presence of*mossue* as a variation present in this copy as well (88n641).
 [^40]: [](#ftnt_ref40) On the issue of ‘clutter,’ Tufte argues, “‘Clutter’ in data graphics is evidence that your models don’t fit the data – and that you know it. You also know that your summary graphics cover up contrary data and depict dubious thresholds not present in the data set. Such cheats are obvious and easily detected, and damage your credibility” (Tufte 101). In traditional editions, ‘clutter’ is tucked away in the extensive paratextual notes — if such notes are included at all — that the interested reader must then decode in order to fully grasp both the source material and the editor’s interventions in order to craft well-founded arguments on the available textual data.
-[^41]: [](#ftnt_ref41) Cerquiglini also mentions Jean Rychner’s *Le Lai de Lanval *(1958) and Willem Noomen and Nico Van den Boogaard’s* Nouveau Recueil complet des fabliaux* (1983).
+[^41]: [](#ftnt_ref41) Cerquiglini also mentions Jean Rychner’s *Le Lai de Lanval *(1958) and Willem Noomen and Nico Van den Boogaard’s *Nouveau Recueil complet des fabliaux* (1983).
 [^42]: [](#ftnt_ref42) These copies have been given the labels A, B, C, D, E, L, F1, and F2. Alfred T. Baker is responsible for labeling the many versions and manuscript copies of the French Mary the Egyptian legend with their current sigla in his 1916 edition. Dembowski uses Baker’s system in his own 1977 edition, building on Baker’s labeling where appropriate. For example, T-F1 was unknown to Baker, and so, Dembowski is responsible for lettering the T fragments with superscript numbers. I follow Dembowski’s labels, and I provide more in-depth descriptions of each of the T copies in Appendix 1 of this dissertation.
-[^43]: [](#ftnt_ref43) We do currently have several print editions of Version T of the Life of Mary the Egyptian, each selecting a different manuscript as their choice of base text. As mentioned above, Dembowski’s *La Vie de sainte Marie l’Égyptienne: Versions en ancien et en moyen français *(1977) opts for copy T-A as its base text; Michèle Cruz-Sáenz offers an edition of copy T-B in her* The Life of Saint Mary of Egypt: An Edition and Study of the Medieval French and Spanish Verse Redactions *(1979). Prior to these 1970s editions, Baker published his critical edition — which is a composite of several T manuscripts — beside an edited transcript of manuscript copy T-C in an issue of the* Revue des langues romanes*(1916), and Matthew Cooke published his edition — “très inexactement transcrit” according to Dembowski (16) — of T-C in 1852.
+[^43]: [](#ftnt_ref43) We do currently have several print editions of Version T of the Life of Mary the Egyptian, each selecting a different manuscript as their choice of base text. As mentioned above, Dembowski’s *La Vie de sainte Marie l’Égyptienne: Versions en ancien et en moyen français *(1977) opts for copy T-A as its base text; Michèle Cruz-Sáenz offers an edition of copy T-B in her *The Life of Saint Mary of Egypt: An Edition and Study of the Medieval French and Spanish Verse Redactions* (1979). Prior to these 1970s editions, Baker published his critical edition — which is a composite of several T manuscripts — beside an edited transcript of manuscript copy T-C in an issue of the *Revue des langues romanes* (1916), and Matthew Cooke published his edition — “très inexactement transcrit” according to Dembowski (16) — of T-C in 1852.
 [^44]: [](#ftnt_ref44) Robertson’s article was written with the approval of Peter Dembowski who Robertson acknowledges from the outset, “I wish to thank Peter F. Dembowski for his critical reading of this article, and for his patient counsel throughout all my hagiographical researches” (“The Anglo-Norman Verse” 13).
 [^45]: [](#ftnt_ref45) Cerquiglini demonstrates the difficulty of reconstructing variants from such a critical apparatus in *Éloge de la variante* (1989). Armed with an editor’s encoded notes as well as pencil and paper, “Le lecteur patient, et indocile, mal satisfait de l'unicité qu'on lui offre, en retire quelques fragments, des lambeaux, des éclats, mais non pas cet autre du texte que l'apparat critique a pour fonction secrète d'éparpiller sourdement” (106).
-[^46]: [](#ftnt_ref46) Robertson makes this argument particularly in reference to the T corpus, but he notes that this criticism may validly be leveled against *any * edition of almost*any * text from the Old French canon: “For this work and for most others in the Old French canon, modern editors have chosen rather to present editions based on single manuscripts, emending these as little as possible. … The problem inherent in this approach (by no means unique to*St. Mary the Egyptian*) is that no one of the extant manuscripts adequately represents the poem. In all except A and C, large gaps caused by omissions or mutilations appear in the final pages. All of them, with the possible exception of L, show extensive interventions performed by the individual scribes, voluntarily or no. This factor visibly affects A and B as well as C — more so perhaps than their respective editions acknowledge” (“The Anglo-Norman Verse Life” 31). Similarly, Arthur Bahr calls the traditional practice of choosing only one manuscript as the base text for an edition an “ascetic” practice that limits our understanding of the miscellaneous (191).
+[^46]: [](#ftnt_ref46) Robertson makes this argument particularly in reference to the T corpus, but he notes that this criticism may validly be leveled against *any* edition of almost *any* text from the Old French canon: “For this work and for most others in the Old French canon, modern editors have chosen rather to present editions based on single manuscripts, emending these as little as possible. … The problem inherent in this approach (by no means unique to *St. Mary the Egyptian*) is that no one of the extant manuscripts adequately represents the poem. In all except A and C, large gaps caused by omissions or mutilations appear in the final pages. All of them, with the possible exception of L, show extensive interventions performed by the individual scribes, voluntarily or no. This factor visibly affects A and B as well as C — more so perhaps than their respective editions acknowledge” (“The Anglo-Norman Verse Life” 31). Similarly, Arthur Bahr calls the traditional practice of choosing only one manuscript as the base text for an edition an “ascetic” practice that limits our understanding of the miscellaneous (191).
 [^47]: [](#ftnt_ref47) In Chapter 2 of this dissertation, I narrow my reader’s focus to consider the features of the two portraits of Mary the Egyptian, providing edited transcriptions of each T copy as well as English translations unique to each of these copies.
 [^48]: [](#ftnt_ref48) Robinson — himself a digital editor of medieval manuscripts — cautions against this sort of work, “Making a real electronic scholarly edition is far, far harder than writing a book, and takes far, far longer. Anyone who has had anything to do with electronic editions will tell you this. … If this is what you want to do, here is what I will tell you. Sell the family dog. Lock the door to your study and don’t come out for twenty years” (“The Ends of Editing” 20).
 [^49]: [](#ftnt_ref49) Bryant’s *The Fluid Text: A Theory of Revision and Editing for Book and Screen* (2002) provides a useful starting point for rethinking our approach to editing as one that should convey the fluidity of texts to the reader and not merely a polished final product: “Typically, textual scholars are content to showcase the clear reading text they have labored to produce, relegating the textual apparatus, which contains the evidence of textual fluidity, to a secondary position for readers to inspect, if they desire. Thus, learning about the text is optional, and this is (perhaps) acceptable, if all you want to do is read a single, fixed text. But in reading a fluid text, learning about the text (that is, its variants) is not optional. Not only must the reader read self-consciously but the editor must make the edition aware of itself, and readably so. The apparatus must be more visible, and enticing. It must teach readers how to read what they are reading” (122-123). Bryant’s own digital editing work is the Melville Electronic Library, which seeks to present the works of Melville to online users as products of long revision by many hands, Melville’s and others.
